--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -53,7 +53,7 @@ button:active {
 }
 
 button:disabled {
-  background-color: #666; /* 666 типа деман (спермы) ну вы поняли */
+  background-color: #666;
   cursor: default;
 }
 
@@ -241,7 +241,7 @@ img {
 #header {
   height: 86px;
   width: 100vw;
-  padding: 0 5%;
+  padding: 0 20px;
 
   display: flex;
   align-items: center;
@@ -263,6 +263,7 @@ img {
 }
 #header-logo {
   height: 50px;
+  margin-right: 50px;
 }
 #footer-logo {
   height: 100px;
@@ -271,7 +272,7 @@ img {
 
 #header-tabs {
   display: flex;
-  gap: 10px;
+  gap: 20px;
   flex-wrap: nowrap;
 }
 
